fix overflow for dialog list

--- a/Plugins/Vorlon/plugins/botFrameworkInspector/control.css
+++ b/Plugins/Vorlon/plugins/botFrameworkInspector/control.css
@@ -26,7 +26,6 @@ body {
 }
 
 #left #dialogs {
-    height: 100vh;
     display:flex;
     flex-direction: column;
 }
